--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,106 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="Neptune Astro">
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem error quas
+  est. Cupiditate quibusdam doloribus consectetur necessitatibus repudiandae
+  dicta et quisquam harum itaque. Porro sint voluptatem est consectetur
+  quibusdam fugiat mollitia libero qui, ipsa, veritatis animi quisquam nemo
+  adipisci excepturi inventore eius debitis illo aliquam! Iusto, blanditiis
+  autem? Laudantium maiores nihil repellendus commodi culpa odit voluptatum quia
+  numquam, consectetur rerum nisi esse ratione recusandae delectus ex qui
+  tenetur quasi incidunt unde molestias! Suscipit veniam maxime quaerat eum
+  voluptatem reiciendis similique minima, esse eligendi iure incidunt quam, at
+  id illum ex voluptates fuga nobis quos ducimus asperiores amet. Aspernatur
+  nobis porro quae exercitationem ut accusantium libero tempore excepturi iste?
+  Necessitatibus quas sit accusantium voluptatum debitis suscipit nesciunt,
+  error at illo nemo pariatur ab adipisci nam nisi fugiat velit vel aperiam.
+  Deleniti culpa cumque at ipsam dolore exercitationem doloremque animi officia
+  ipsum inventore consequatur, aspernatur est nobis quos in. Officiis modi,
+  voluptatum sed fuga magnam quaerat maxime quasi molestiae error non
+  consequuntur laborum aspernatur rerum ipsam? Ipsam, animi sed repellendus
+  fugit perferendis minima similique amet neque voluptas reprehenderit porro
+  nulla? Veniam, quam incidunt similique dicta alias architecto non quia itaque
+  qui, unde minus aut vel! Necessitatibus omnis eum ratione est aliquid eligendi
+  eos, tempora, corporis deserunt perspiciatis voluptatum, illo modi?
+  Voluptates, id! Molestias tenetur ipsa itaque aut cupiditate, praesentium ex
+  pariatur explicabo fuga unde cum commodi, officia quam modi quisquam ad
+  repudiandae sit aperiam doloremque similique nihil reiciendis recusandae
+  laborum iure? Possimus, accusantium omnis eveniet, excepturi sed aspernatur at
+  illo vero ratione saepe ducimus consequatur sapiente harum minima, natus
+  architecto. Saepe necessitatibus, rem harum quos deserunt aperiam consectetur
+  accusantium similique, eius ipsam accusamus totam tempore voluptatibus!
+  Ratione placeat atque modi et, aspernatur dicta, laudantium reprehenderit in,
+  iste ipsum illo adipisci? Eaque debitis unde, magni repudiandae optio aliquid
+  culpa tempore itaque, quasi quis, dolor ad illo! Rem soluta vitae saepe sit
+  amet sed excepturi praesentium, aperiam suscipit eos itaque nulla deserunt
+  atque quos optio ratione similique veniam aliquid minima maiores officia ullam
+  tempora provident. Corrupti est iste perferendis, eligendi facere blanditiis
+  vel vitae, non eum similique tempore nobis ducimus quaerat, placeat architecto
+  repellendus voluptates fugiat harum ullam! Accusamus repellat tempora magni
+  necessitatibus qui omnis, sed ab aspernatur molestiae labore maxime explicabo
+  tempore porro consequuntur nihil sequi maiores dolore dolores, nobis aliquam
+  laudantium minima? Voluptatum iure possimus earum cum aut. Tenetur, veritatis
+  dolore dolores dolorum illum minima laborum? Consectetur veritatis enim a
+  delectus unde quibusdam magni. Nam assumenda quos minima, repudiandae totam
+  tempora repellendus velit quibusdam dicta minus corporis dolorem, placeat
+  reprehenderit explicabo, corrupti porro deserunt non dolor suscipit eveniet
+  unde iusto atque? Quos quaerat voluptate, sed fuga iusto hic, in possimus illo
+  impedit veniam blanditiis deleniti esse id deserunt quam porro velit rem quod
+  a ex unde commodi assumenda atque quia? Inventore asperiores cupiditate natus
+  corporis. Et voluptatem repudiandae animi sint, officiis molestias tenetur
+  earum repellendus aperiam deserunt eaque ipsa, suscipit dolorum. Quod dolorum
+  molestias doloribus, iusto blanditiis nobis provident minus nesciunt vero?
+  Perferendis quam ullam, obcaecati neque quia pariatur ab? Atque, vero quidem
+  qui molestias est totam fugit, sapiente cumque voluptate fuga maxime quo
+  ratione molestiae dignissimos cupiditate modi porro? Accusantium nobis maxime
+  iure earum ullam veritatis repellat dolorem, voluptatibus quisquam deleniti
+  sint, rerum esse aliquid impedit modi fuga consequatur exercitationem vitae
+  cupiditate odio atque tempore, tempora optio? Minima vel nihil aliquid vitae
+  ullam natus voluptatum facilis dolorum quibusdam perspiciatis maiores atque,
+  fuga, et corrupti, ipsa asperiores nisi officiis eum exercitationem laudantium
+  quia. Illo et similique excepturi quae temporibus nesciunt vitae, facere
+  laboriosam ex eum exercitationem non adipisci eligendi aut suscipit facilis
+  sit ea assumenda corporis consequatur molestiae. Quae excepturi minus cum sed,
+  minima quas placeat voluptate fugit harum animi, corrupti ipsa at accusantium
+  rem fuga accusamus magnam omnis eligendi, voluptatem assumenda aliquam libero?
+  Possimus quisquam exercitationem adipisci perspiciatis nulla. Doloribus quo
+  cupiditate totam veritatis culpa aliquid enim odio accusamus quibusdam, error,
+  illum voluptatibus earum aperiam velit facere dolore iste itaque illo labore
+  suscipit ea sequi dolorum eum rerum? Soluta aperiam voluptas possimus autem
+  nisi laudantium iure. Quos tempora non deleniti veritatis accusantium
+  voluptatem reiciendis nihil esse neque. Officiis laborum aspernatur, a sunt
+  similique enim iure. Qui sed corrupti odio, molestiae, pariatur natus laborum
+  veniam suscipit assumenda similique dicta impedit? Magni, labore doloribus!
+  Maiores eveniet dolor ipsa magnam? Suscipit officiis culpa pariatur fugiat,
+  tempore excepturi cumque! Vero laboriosam alias optio tenetur minus quam
+  labore, voluptas debitis asperiores quia quis aspernatur consequatur quaerat
+  accusantium culpa sed eos quasi quidem id non dolores? Commodi perferendis
+  dolor et accusamus rerum natus perspiciatis maxime soluta, distinctio alias
+  quos earum esse voluptatem. Recusandae voluptate optio necessitatibus harum,
+  aliquam laudantium ducimus perferendis velit incidunt porro sapiente provident
+  nisi dignissimos architecto, quia, ex quibusdam nam quam! Et libero suscipit
+  quos repellendus unde placeat id tempora deleniti pariatur ea reprehenderit
+  rem, corporis nulla magni cupiditate fugiat voluptas, maiores perferendis?
+  Fugiat autem ratione ab veniam. Pariatur saepe consequatur explicabo ullam.
+  Corporis a non ducimus maiores reprehenderit consequatur officiis, possimus
+  totam, nisi reiciendis magnam rem ut minima accusamus voluptatum iure
+  quibusdam tenetur dolores esse praesentium deleniti sapiente voluptatibus
+  natus? Accusantium, neque. Beatae hic, est rem, quibusdam voluptatem error
+  esse quae ipsa, vitae fugiat in. Sed sint tempore libero architecto a animi
+  corporis. Sequi doloribus vero eaque atque libero et nostrum aspernatur
+  tenetur! Quis nisi, id pariatur molestias laborum officiis dignissimos optio
+  tenetur ipsam, atque facilis debitis nam quam. Natus, corrupti voluptatum?
+  Nulla minima laudantium doloribus molestias? Sequi, fuga animi! Ea porro ab
+  vero eligendi. Vitae nihil ut quia voluptatibus magnam dolorem eius unde quos,
+  asperiores nobis laborum cum quo nulla, quisquam assumenda. Molestiae quaerat
+  reprehenderit eum aliquam quibusdam nihil ut non eos ipsam, quas aliquid
+  assumenda tenetur provident sequi corporis numquam repellat dolores. Nihil
+  consequuntur necessitatibus doloremque sint quis quas, asperiores id cum nemo
+  eveniet officiis architecto ipsam labore rerum ea qui, dolor minus dolorum
+  minima fuga veritatis. Quibusdam rerum, quidem numquam laborum doloremque quas
+  dicta eos sit, aspernatur quae eligendi quaerat veniam, sequi facere autem id
+  reprehenderit velit delectus! Quod animi voluptates reprehenderit dolores
+  deleniti deserunt dolorum eligendi provident ad iusto!
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
