--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,14 +19,14 @@ const { title = 'Neptune Astro', description = 'Created by @lutfiandri' } =
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="generator" content={Astro.generator} />
 
     <title>{title}</title>
 
     <ViewTransitions />
   </head>
-  <body>
+  <body transition:animate="initial">
     <Navbar />
     <main>
       <slot />
