feat: masonry layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title = 'Neptune Astro', description = 'Created by @lutfiandri' } =
   </head>
   <body transition:animate="initial">
     <Navbar />
-    <main>
+    <main class="container">
       <slot />
     </main>
   </body>
