--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,5 +1,19 @@
 ---
 import Layout from '@layouts/Layout.astro';
+import Masonry from '@components/Masonry.astro';
 ---
 
-<Layout> portfolio </Layout>
+<Layout>
+  <Masonry>
+    <div>-1</div>
+    <div>0</div>
+    <div>
+      l;asjkdfl;aksjdflk;asjf;laksjdf;lkjasdf jasldkfj;al;ksjdf
+      lak;sjdfl;jasldfjals;djf l;kajsf; lajsdflk;j asdl;fj
+    </div>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+  </Masonry>
+</Layout>
