--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,50 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap');
 
 @tailwind base;
-
-* {
-  /* @apply transition-all duration-100 ease-bounce-out delay-[0ms]; */
-}
-
-::-webkit-scrollbar {
-  @apply h-[12px] w-[12px];
-}
-
-::-webkit-scrollbar-thumb {
-  @apply w-full rounded-md border-2 border-solid border-gray-light bg-gray;
-}
-
-html,
-body {
-  @apply bg-gray-light font-sans text-gray-dark transition-all delay-[0ms] duration-100;
-}
-
 @tailwind components;
-
-.swiper-pagination-bullet {
-  @apply !bg-gray !opacity-50;
-}
-
-.swiper-pagination-bullet-active {
-  @apply !bg-blue !opacity-100;
-}
-
-/* others */
-.video-wrapper {
-  /* @apply my-4 mx-auto max-w-[600px]; */
-  position: relative;
-  padding-bottom: 56.25%;
-  overflow: hidden;
-  /* 16:9 */
-  height: 0;
-}
-
-.video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 @tailwind utilities;
+
+@layer base {
+  ::-webkit-scrollbar {
+    @apply h-[12px] w-[12px];
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply w-full rounded-md border-2 border-solid border-gray-light bg-gray;
+  }
+
+  html,
+  body {
+    @apply bg-gray-light font-sans text-gray-dark transition-all delay-[0ms] duration-100;
+  }
+}
+
+@layer utilities {
+  .swiper-pagination-bullet {
+    @apply !bg-gray !opacity-50;
+  }
+
+  .swiper-pagination-bullet-active {
+    @apply !bg-blue !opacity-100;
+  }
+
+  /* others */
+  .video-wrapper {
+    /* @apply my-4 mx-auto max-w-[600px]; */
+    position: relative;
+    padding-bottom: 56.25%;
+    overflow: hidden;
+    /* 16:9 */
+    height: 0;
+  }
+
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .masonry {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-flow: dense;
+    grid-gap: 10px;
+  }
+}
