feat: read markdown

--- a/src/components/Masonry.astro
+++ b/src/components/Masonry.astro
@@ -2,10 +2,7 @@
 
 ---
 
-<div
-  id="masonry"
-  class="grid grid-flow-dense grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
->
+<div id="masonry" class="grid grid-flow-dense grid-cols-1 lg:grid-cols-2 gap-4">
   <slot />
 </div>
 
