--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,106 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
+
+import { getCollection, getEntry } from 'astro:content';
+const allPortfolios = await getCollection('portfolio');
+
+console.log(allPortfolios);
 ---
 
 <Layout title="Neptune Astro">
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem error quas
-  est. Cupiditate quibusdam doloribus consectetur necessitatibus repudiandae
-  dicta et quisquam harum itaque. Porro sint voluptatem est consectetur
-  quibusdam fugiat mollitia libero qui, ipsa, veritatis animi quisquam nemo
-  adipisci excepturi inventore eius debitis illo aliquam! Iusto, blanditiis
-  autem? Laudantium maiores nihil repellendus commodi culpa odit voluptatum quia
-  numquam, consectetur rerum nisi esse ratione recusandae delectus ex qui
-  tenetur quasi incidunt unde molestias! Suscipit veniam maxime quaerat eum
-  voluptatem reiciendis similique minima, esse eligendi iure incidunt quam, at
-  id illum ex voluptates fuga nobis quos ducimus asperiores amet. Aspernatur
-  nobis porro quae exercitationem ut accusantium libero tempore excepturi iste?
-  Necessitatibus quas sit accusantium voluptatum debitis suscipit nesciunt,
-  error at illo nemo pariatur ab adipisci nam nisi fugiat velit vel aperiam.
-  Deleniti culpa cumque at ipsam dolore exercitationem doloremque animi officia
-  ipsum inventore consequatur, aspernatur est nobis quos in. Officiis modi,
-  voluptatum sed fuga magnam quaerat maxime quasi molestiae error non
-  consequuntur laborum aspernatur rerum ipsam? Ipsam, animi sed repellendus
-  fugit perferendis minima similique amet neque voluptas reprehenderit porro
-  nulla? Veniam, quam incidunt similique dicta alias architecto non quia itaque
-  qui, unde minus aut vel! Necessitatibus omnis eum ratione est aliquid eligendi
-  eos, tempora, corporis deserunt perspiciatis voluptatum, illo modi?
-  Voluptates, id! Molestias tenetur ipsa itaque aut cupiditate, praesentium ex
-  pariatur explicabo fuga unde cum commodi, officia quam modi quisquam ad
-  repudiandae sit aperiam doloremque similique nihil reiciendis recusandae
-  laborum iure? Possimus, accusantium omnis eveniet, excepturi sed aspernatur at
-  illo vero ratione saepe ducimus consequatur sapiente harum minima, natus
-  architecto. Saepe necessitatibus, rem harum quos deserunt aperiam consectetur
-  accusantium similique, eius ipsam accusamus totam tempore voluptatibus!
-  Ratione placeat atque modi et, aspernatur dicta, laudantium reprehenderit in,
-  iste ipsum illo adipisci? Eaque debitis unde, magni repudiandae optio aliquid
-  culpa tempore itaque, quasi quis, dolor ad illo! Rem soluta vitae saepe sit
-  amet sed excepturi praesentium, aperiam suscipit eos itaque nulla deserunt
-  atque quos optio ratione similique veniam aliquid minima maiores officia ullam
-  tempora provident. Corrupti est iste perferendis, eligendi facere blanditiis
-  vel vitae, non eum similique tempore nobis ducimus quaerat, placeat architecto
-  repellendus voluptates fugiat harum ullam! Accusamus repellat tempora magni
-  necessitatibus qui omnis, sed ab aspernatur molestiae labore maxime explicabo
-  tempore porro consequuntur nihil sequi maiores dolore dolores, nobis aliquam
-  laudantium minima? Voluptatum iure possimus earum cum aut. Tenetur, veritatis
-  dolore dolores dolorum illum minima laborum? Consectetur veritatis enim a
-  delectus unde quibusdam magni. Nam assumenda quos minima, repudiandae totam
-  tempora repellendus velit quibusdam dicta minus corporis dolorem, placeat
-  reprehenderit explicabo, corrupti porro deserunt non dolor suscipit eveniet
-  unde iusto atque? Quos quaerat voluptate, sed fuga iusto hic, in possimus illo
-  impedit veniam blanditiis deleniti esse id deserunt quam porro velit rem quod
-  a ex unde commodi assumenda atque quia? Inventore asperiores cupiditate natus
-  corporis. Et voluptatem repudiandae animi sint, officiis molestias tenetur
-  earum repellendus aperiam deserunt eaque ipsa, suscipit dolorum. Quod dolorum
-  molestias doloribus, iusto blanditiis nobis provident minus nesciunt vero?
-  Perferendis quam ullam, obcaecati neque quia pariatur ab? Atque, vero quidem
-  qui molestias est totam fugit, sapiente cumque voluptate fuga maxime quo
-  ratione molestiae dignissimos cupiditate modi porro? Accusantium nobis maxime
-  iure earum ullam veritatis repellat dolorem, voluptatibus quisquam deleniti
-  sint, rerum esse aliquid impedit modi fuga consequatur exercitationem vitae
-  cupiditate odio atque tempore, tempora optio? Minima vel nihil aliquid vitae
-  ullam natus voluptatum facilis dolorum quibusdam perspiciatis maiores atque,
-  fuga, et corrupti, ipsa asperiores nisi officiis eum exercitationem laudantium
-  quia. Illo et similique excepturi quae temporibus nesciunt vitae, facere
-  laboriosam ex eum exercitationem non adipisci eligendi aut suscipit facilis
-  sit ea assumenda corporis consequatur molestiae. Quae excepturi minus cum sed,
-  minima quas placeat voluptate fugit harum animi, corrupti ipsa at accusantium
-  rem fuga accusamus magnam omnis eligendi, voluptatem assumenda aliquam libero?
-  Possimus quisquam exercitationem adipisci perspiciatis nulla. Doloribus quo
-  cupiditate totam veritatis culpa aliquid enim odio accusamus quibusdam, error,
-  illum voluptatibus earum aperiam velit facere dolore iste itaque illo labore
-  suscipit ea sequi dolorum eum rerum? Soluta aperiam voluptas possimus autem
-  nisi laudantium iure. Quos tempora non deleniti veritatis accusantium
-  voluptatem reiciendis nihil esse neque. Officiis laborum aspernatur, a sunt
-  similique enim iure. Qui sed corrupti odio, molestiae, pariatur natus laborum
-  veniam suscipit assumenda similique dicta impedit? Magni, labore doloribus!
-  Maiores eveniet dolor ipsa magnam? Suscipit officiis culpa pariatur fugiat,
-  tempore excepturi cumque! Vero laboriosam alias optio tenetur minus quam
-  labore, voluptas debitis asperiores quia quis aspernatur consequatur quaerat
-  accusantium culpa sed eos quasi quidem id non dolores? Commodi perferendis
-  dolor et accusamus rerum natus perspiciatis maxime soluta, distinctio alias
-  quos earum esse voluptatem. Recusandae voluptate optio necessitatibus harum,
-  aliquam laudantium ducimus perferendis velit incidunt porro sapiente provident
-  nisi dignissimos architecto, quia, ex quibusdam nam quam! Et libero suscipit
-  quos repellendus unde placeat id tempora deleniti pariatur ea reprehenderit
-  rem, corporis nulla magni cupiditate fugiat voluptas, maiores perferendis?
-  Fugiat autem ratione ab veniam. Pariatur saepe consequatur explicabo ullam.
-  Corporis a non ducimus maiores reprehenderit consequatur officiis, possimus
-  totam, nisi reiciendis magnam rem ut minima accusamus voluptatum iure
-  quibusdam tenetur dolores esse praesentium deleniti sapiente voluptatibus
-  natus? Accusantium, neque. Beatae hic, est rem, quibusdam voluptatem error
-  esse quae ipsa, vitae fugiat in. Sed sint tempore libero architecto a animi
-  corporis. Sequi doloribus vero eaque atque libero et nostrum aspernatur
-  tenetur! Quis nisi, id pariatur molestias laborum officiis dignissimos optio
-  tenetur ipsam, atque facilis debitis nam quam. Natus, corrupti voluptatum?
-  Nulla minima laudantium doloribus molestias? Sequi, fuga animi! Ea porro ab
-  vero eligendi. Vitae nihil ut quia voluptatibus magnam dolorem eius unde quos,
-  asperiores nobis laborum cum quo nulla, quisquam assumenda. Molestiae quaerat
-  reprehenderit eum aliquam quibusdam nihil ut non eos ipsam, quas aliquid
-  assumenda tenetur provident sequi corporis numquam repellat dolores. Nihil
-  consequuntur necessitatibus doloremque sint quis quas, asperiores id cum nemo
-  eveniet officiis architecto ipsam labore rerum ea qui, dolor minus dolorum
-  minima fuga veritatis. Quibusdam rerum, quidem numquam laborum doloremque quas
-  dicta eos sit, aspernatur quae eligendi quaerat veniam, sequi facere autem id
-  reprehenderit velit delectus! Quod animi voluptates reprehenderit dolores
-  deleniti deserunt dolorum eligendi provident ad iusto!
+  {JSON.stringify(allPortfolios)}
 </Layout>
