--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,17 +1,33 @@
 @layer base {
-  .markdown-container > h1 {
+  .markdown-container h1 {
     @apply mt-8 mb-4 text-2xl font-bold leading-8;
   }
 
-  .markdown-container > h2 {
+  .markdown-container h2 {
     @apply mt-6 mb-4 text-xl font-bold leading-8;
   }
 
-  .markdown-container > h3 {
+  .markdown-container h3 {
     @apply mt-6 mb-4 text-lg font-bold leading-8;
   }
 
-  .markdown-container > p {
+  .markdown-container p {
     @apply my-4 text-justify text-lg leading-8;
+  }
+
+  .markdown-container ul {
+    @apply my-4 ml-6 list-outside list-disc text-justify leading-8;
+  }
+
+  .markdown-container ol {
+    @apply my-4 ml-6 list-outside list-decimal text-justify leading-8;
+  }
+
+  .markdown-container li {
+    @apply my-1;
+  }
+
+  .markdown-container blockquote {
+    @apply my-4 rounded-lg border-l-4 border-blue bg-blue-light py-2 px-6;
   }
 }
